--- a/index.html
+++ b/index.html
@@ -4,9 +4,53 @@
   <title>This is Jasmine's Page for MWD110</title>
 </head>
 
-<body>
+
   <h1>This page is working</h1>
   <p>This paragraph also works.</p>
-</body>
+
+<div id="top-nav">
+   <span id="funimation_1">COMING SOON: MY HERO ACADEMIA SEASON 5. CATCHING UP ON SEARONS 1-4 NOW! - SIGN UP FOR A PAID SUBSCRITION AND GET TWO WEEKS FOR FREE</span>
+   </div>
+ 
+ <div id="funimation_logo">
+   <span id="funimation_2">funimation</span>
+   <span id="top-menu">LOG IN</span>
+   
+</div>
+
+<div id=heading><h1>The World's Best Anime
+  </h1> 
+  <h3>
+  Binge 13,000 hours of anime--from iconic classics
+  to the latest from Japan. Enjoy ad-free subs and dubs that you can stream or download to go.
+  </h3>
+  </div>
+ 
+
+<div id="banner">
+
+<img src="https://derf9v1xhwwx1.cloudfront.net/image/upload/q_90/cste/766042fd-ccc6-4c59-a94c-86a58c7d36c3.png" height="300"
+</div>
+
+
+<div id="below-banner">
+ <span id="blue-button">Learn More</span>
+</div>
+
+ 
+ <div id="show-images">
+ <img src="https://cdn.myanimelist.net/images/anime/1711/110614.jpg" height="400">
+ 
+ </div>
+
 
 </html>
+
+document.getElementsByTagName('body')[0].innerText = "Javascript Text Here";
+
+<link rel="stylesheet" href=""/>
+
+4:00 PM
+and for js its <script src=""></script>
+
+
