--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 document.getElementsByTagName('body')[0].innerText = "Javascript Text Here";
 
-<link rel="stylesheet" href=""/>
+<link rel="stylesheet" href="css_stylesheet.css"/>
 
 4:00 PM
 and for js its <script src=""></script>
