--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
   <title>This is Jasmine's Page for MWD110</title>
 </head>
 
-
-  <h1>This page is working</h1>
-  <p>This paragraph also works.</p>
-
+<link rel="stylesheet" href="css_stylesheet.css"/>
+  
 <div id="top-nav">
-   <span id="funimation_1">COMING SOON: MY HERO ACADEMIA SEASON 5. CATCHING UP ON SEARONS 1-4 NOW! - SIGN UP FOR A PAID SUBSCRITION AND GET TWO WEEKS FOR FREE</span>
+
+  <h1>Welcome to Jasmine's Project for MWD 110</h1>
+  <p>This site is a culmination of all the material that has been covered over the semester. On this site you will also find blog posts for each unit that was covered in the course.</p>
+
+   <span id="funimation_1"></span>
    </div>
  
  <div id="funimation_logo">
-   <span id="funimation_2">funimation</span>
-   <span id="top-menu">LOG IN</span>
+   <span id="funimation_2"></span>
+   <span id="top-menu"></span>
    
 </div>
 
-<div id=heading><h1>The World's Best Anime
+<div id=heading><h1>T
   </h1> 
   <h3>
-  Binge 13,000 hours of anime--from iconic classics
-  to the latest from Japan. Enjoy ad-free subs and dubs that you can stream or download to go.
+ 
   </h3>
   </div>
  
@@ -39,7 +40,7 @@
 
  
  <div id="show-images">
- <img src="https://cdn.myanimelist.net/images/anime/1711/110614.jpg" height="400">
+ <img src="" height="400">
  
  </div>
 
@@ -48,9 +49,7 @@
 
 document.getElementsByTagName('body')[0].innerText = "Javascript Text Here";
 
-<link rel="stylesheet" href="css_stylesheet.css"/>
 
-4:00 PM
-and for js its <script src=""></script>
+
 
 
