--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    
 </div>
 
-<div id=heading><h1>T
+<div id=heading><h1>This is a place holder for content that has not been decided yet.
   </h1> 
   <h3>
  
