--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
 <div id="top-nav">
 
-  <h1>Welcome to Jasmine's Project for MWD 110</h1>
+  <h1>Destination Boba</h1>
   <p>This site is a culmination of all the material that has been covered over the semester. On this site you will also find blog posts for each unit that was covered in the course.</p>
 
    <span id="funimation_1"></span>
@@ -22,7 +22,7 @@
 
 <div id=heading><h1>This is a place holder for content that has not been decided yet.
   </h1> 
-  <h3>
+  <h3> 
  
   </h3>
   </div>
