--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
 </head>
 
 <link rel="stylesheet" href="css_stylesheet.css"/>
+
+<link href='https://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
   
 <div id="top-nav">
 
   <h1>Destination Boba</h1>
-  <p>This site is a culmination of all the material that has been covered over the semester. On this site you will also find blog posts for each unit that was covered in the course.</p>
+	<h2>All Your Boba Needs in One Place</h2>
+
+  <p>Welcome to Destination Boba!</p>
+  <p>Destination Boba connects people and helps them order from their favorite boba restaurants, or it can be used to find a new favorite resturant!</p>
+  
+<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fghspawprint.com%2F2083%2Fopinion%2Fbattle-of-the-boba-a-bubble-tea-review%2F&psig=AOvVaw32wUGR2vZe0yt9ez8IOto5&ust=1620419880214000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCLDn9Mz0tfACFQAAAAAdAAAAABAF" height="300"
 
    <span id="funimation_1"></span>
    </div>
