--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <div id="banner">
 
-<img src="https://derf9v1xhwwx1.cloudfront.net/image/upload/q_90/cste/766042fd-ccc6-4c59-a94c-86a58c7d36c3.png" height="300"
+<img src="https://cdn.vox-cdn.com/thumbor/M9bfb5iG6xplRJZfp9565pguaJ8=/0x0:1182x880/1200x900/filters:focal(497x346:685x534)/cdn.vox-cdn.com/uploads/chorus_image/image/69139093/BubbleTea1.0.png" height="300"
 </div>
 
 
@@ -54,6 +54,18 @@
  <img src="" height="400">
  
  </div>
+
+<p><a href="pages/about.html">About</a></p>
+
+<p><a href="pages/WhatisBoba.html">What is Boba?</a></p>
+
+<p><a href="https://www.w3schools.com/html/default.asp">HTML tutorial</a></p>
+
+<p><a href="https://www.w3schools.com/html/default.asp">HTML tutorial</a></p>
+
+<p><a href="https://www.w3schools.com/html/default.asp">HTML tutorial</a></p>
+
+<p><a href="pages/blogposts.html">Blog Posts</a></p>
 
 
 </html>
