--- a/index.html
+++ b/index.html
@@ -39,21 +39,16 @@
   </div>
  
 
-<div id="banner">
+<div id="boba_3">
 
 <img src="https://cdn.vox-cdn.com/thumbor/M9bfb5iG6xplRJZfp9565pguaJ8=/0x0:1182x880/1200x900/filters:focal(497x346:685x534)/cdn.vox-cdn.com/uploads/chorus_image/image/69139093/BubbleTea1.0.png" height="300"
 </div>
 
 
-<div id="below-banner">
+<div id="">
  <span id="blue-button">Learn More</span>
 </div>
 
- 
- <div id="show-images">
- <img src="" height="400">
- 
- </div>
 
 <p><a href="pages/about.html">About</a></p>
 
