--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </div>
 
 
-<p><a href="pages/about.html">About</a></p>
+<p><a href="pages/About.html">About</a></p>
 
 <p><a href="pages/WhatisBoba.html">What is Boba?</a></p>
 
