--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
 </div>
 
 
-<p><a href="pages/About.html">About</a></p>
+<p><a href="About.html">About</a></p>
 
-<p><a href="pages/WhatisBoba.html">What is Boba?</a></p>
-
-<p><a href="https://www.w3schools.com/html/default.asp">HTML tutorial</a></p>
+<p><a href="WhatisBoba.html">What is Boba?</a></p>
 
 <p><a href="https://www.w3schools.com/html/default.asp">HTML tutorial</a></p>
 
 <p><a href="https://www.w3schools.com/html/default.asp">HTML tutorial</a></p>
 
-<p><a href="pages/blogposts.html">Blog Posts</a></p>
+<p><a href="https://www.w3schools.com/html/default.asp">HTML tutorial</a></p>
+
+<p><a href="blogposts.html">Blog Posts</a></p>
 
 
 </html>
