--- a/blogposts.html
+++ b/blogposts.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+
+<link rel="stylesheet" href="css_stylesheet.css"/>
+
+<link href='https://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
+
 <h1>Blog Posts</h1>
 
 <h3>Check out the link below to find Jasmine's blog posts from the MWD Course!</h3>
