--- a/WhatisBoba.html
+++ b/WhatisBoba.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 
+<link rel="stylesheet" href="css_stylesheet.css"/>
+
 <link href='https://fonts.googleapis.com/css?family=Jua' rel='stylesheet' type='text/css'>
 
 <h1>What is Boba?</h1>
