--- a/Project/About.html
+++ b/Project/About.html
@@ -4,7 +4,7 @@
 
 <link rel="stylesheet" href="css_stylesheet.css"/>
 
-<link href='https://fonts.googleapis.com/css?family=Fugaz+One' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
 
 <div id=about><h1>About Destination Boba</h1>
 
