--- a/blogposts.html
+++ b/blogposts.html
@@ -4,9 +4,11 @@
 
 <link rel="stylesheet" href="css_stylesheet.css"/>
 
-<link href='https://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel='stylesheet' type='text/css'>
 
 <h1>Blog Posts</h1>
 
 <h3>Check out the link below to find Jasmine's blog posts from the MWD Course!</h3>
+
+<p><a href="https://docs.google.com/document/d/1s1C3vI23RgoaqYHalEV30HHasi_YF56o2Wo1DIL_Eb4/edit?usp=sharing">Blog Posts</a></p>
 
