--- a/index.html
+++ b/index.html
@@ -54,16 +54,15 @@
 
 <p><a href="WhatisBoba.html">What is Boba?</a></p>
 
-<p><a href="https://www.w3schools.com/html/default.asp">HTML tutorial</a></p>
+<p><a href="javascript.html">Javascript</a></p>
 
-<p><a href="https://www.w3schools.com/html/default.asp">HTML tutorial</a></p>
+<p><a href="javascript2.html">Javascript 2</a></p>
 
 <p><a href="blogposts.html">Blog Posts</a></p>
 
 
 </html>
 
-document.getElementsByTagName('body')[0].innerText = "Javascript Text Here";
 
 
 
